# soundverse-play

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: config.py  database.py  exceptions.py  main.py  metrics.py  models.py  schemas.py  seed.py
app/routers/: play.py
app/services/: clip_service.py
monitoring/grafana/provisioning/dashboards/: dashboard.yml  soundverse.json
monitoring/prometheus/: prometheus.yml
tests/: conftest.py  test_metrics.py  test_play.py
